--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
 								</div>
                             </div>
 							<div class="form-group">
+                            	<label for="txt_text_color" class="col-xs-6 control-label">Text Color</label>
+								<div class="input-group col-xs-6">
+								    <input id="txt_text_color" type="text" class="form-control" value="#000000" />
+								</div>
+                            </div>
+							<div class="form-group">
                             	<label for="txt_input_background" class="col-xs-6 control-label">Input Background</label>
 								<div class="input-group col-xs-6">
 								    <input id="txt_input_background" type="text" class="form-control" value="#F4F2F2" />
